# RaTrace

./: .gitignore  README.md  main.py  pyproject.toml
assets/scenes/: UI_overview.py  aperture.py  black_plate.py  diffuse_plane_source.py  diffuse_scattering_surface.py  display.py  flat_mirror.py  glass_parallel_plate.py  ideal_thin_lens.py  parabolic_mirror.py  plane_source.py  plano_spherical_lens.py  point_source.py  prism.py  spherical_lens.py
docs/: index.md
scenes/: Scene_10_DIFFUSE_SCATTERING_SURFACE.py  scene_01_SIMPLE_ON_AXIS_LENS_fan_beam_ideal_lens_beamdump.py  scene_01_SIMPLE_ON_AXIS_LENS_fan_beam_spherical_lens_beamdump.py  scene_02_SNELL'S_LAW_parallel_beam_glass_slab_beam_dump.py  scene_03_SPHERICAL_ABERRATION_parallel_beam_planospherical_lenses.py  scene_03_SPHERICAL_ABERRATION_parallel_beam_spherical_lens_display.py  scene_04_CHROMATIC_ABERRATION_spherical_lens_with_dispersion.py  scene_05_COMA_parallel_beams_spherical_lens_display.py  scene_06_COOKE_TRIPLES_multiple_parallel_beams_and_lenses.py  scene_07_THREE_LENS_OBJECTIVE_multiple_parallel_beams_and_lenses.py  scene_08_NEWTONIAN_TELESCOPE_parabolic_mirror_lenses_display.py  scene_09_DOUBLE_SLIT_EXPERIMENT_double_point_source.py  scene_11_SEMITRANSPARENT_MIRROR.py  scene_12_OBJECT_TELECENTRIC_LENS.py  scene_13_BEAM_EXPANDER_plano_spherical lenses.py  scene_13_PLANO_SPHERICAL_LENS.py  scene_20_SCENE_WITH_PARAMETERS_IN_A_LOOP.py
src/: config.ini  main_GUI.py
src/display/: display_class.py  imager_class.py
src/elements/: aperture_class.py  black_plate_class.py  diffuse_plate_class.py  (+15 more)
(+17 files in other folders)
