[project]
name = "ratrace"
version = "0.1.0"
description = "A 2D raytracer with a easy-to-use graphical user interface, written in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
]
